--- a/package.json
+++ b/package.json
@@ -35,16 +35,15 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "0.20.0",
-    "react-native-webview": "13.13.5",
-    "react-native-worklets": "0.5.1"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "tsx": "^4.20.4"
+    "tsx": "^4.20.4",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
